<resources>
    <string name="app_name">AndroidTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--wave view use-->
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>
    <!--Fab progress circle model use -->
    <string name="railay_beach">Railay Beach</string>
    <string name="photo_attribution">by Jorge Castillo</string>
    <string name="cloud_upload_complete">Uploaded image.</string>
</resources>
